Assembler/parse_functions.c
// Copyright (C) 2026 Panos Stokas <panos.stokas@hotmail.com>
// Parse functions

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <ctype.h>

#include "parse_functions.h"
#include "error_handler.h"
#include "data_structures.h"
#include "config.h"

/* Converts a string to uppercase, excluding quoted parts
taking into account escaped quotes. */
void uppercase(char *s)
{
	if (!s || !*s) return; // ignore NULL or empty strings
	*s = (char)toupper((unsigned char)*s); // first character
	char quoted = 0; // flag
	for (s++; *s; s++) {
		if (s[-1] != '\\' && s[0] == '"') { // \" = escaped quote
			 quoted = !quoted;
		}
		if (!quoted) *s = (char)toupper((unsigned char)*s);
	}
}

int number(const char *s)
{
	if (!s) return -1;
	int n; // converted value (or negative error code)
	char valid[MAX_LINE_LENGTH]; // for sscanf masking -- valid digits
	char invalid[MAX_LINE_LENGTH]; // for sscanf masking -- invalid characters
	char S[MAX_LINE_LENGTH]; // uppercase version of the parameter
	char negative = 0; // is the input negative ?
	scopy(S,s);
	uppercase(S);
	// check if input is negative
	if (S[0] == '-') {
		negative = 1;
		memmove(S, S+1, strlen(S)); // remove the minus
	}
	// extract the valid digits of the parameter and convert it
	// according to its prefix
	if (!strncmp(S, "0X", 2)) {
		// Hexadecimal format, up to 2 digits
		if (sscanf(S, "0X%2[0-9A-F]%[^\n]", valid, invalid) != 1) {
			return HEX_ERROR;
		}
		n = (int)strtol(valid, NULL, 16);
	} else if (!strncmp(S, "0B", 2)) {
		// Binary format, up to 8 digits
		if (sscanf(S, "0B%8[01]%[^\n]", valid, invalid) != 1) {
			return BIN_ERROR;
		}
		n = (int)strtol(valid, NULL, 2);
	} else {
		// Decimal format
		if (sscanf(S, "%[0-9]%[^0-9]", valid, invalid) != 1) {
			return NUMBER_ERROR;
		}
		if (S[0] == '0' && strlen(S) > 1) {
			// trailing zero is not accepted because it signifies
			// octal numbers in GNU-assembly
			return OCTAL_ERROR;
		}
		n = (int)strtol(S, NULL, 10);
	}
	if (n > 0 && negative) {
		if (n > 128) return SIGNED_RANGE_ERROR; // <= -128
		n = 256 - n; // 2's complement
	}
	if (n > 255 || n < 0) return RANGE_ERROR; // unsigned 8 bit
	return n;
}

void trim(char *s)
{
	if (!s || !*s) return;
	char *start = s;
	char *end = s; // end of string
	char quoted = 0;
	while (*end) { // find the terminal or an unquoted semicolon
		// flip the quoted flag if the current end is non-escaped quote (\*)
		if (*end == '"' && (end == start || end[-1] != '\\')) quoted = !quoted;
		// stop parsing at comments (non-quoted semicolon)
		if (!quoted && *end == ';') break;
		// move to the next character
		end++;
	}
	
	if (end == start) {
		end[0] = '\0';
		return;
	}
	
	end--; // point before the semicolon or the terminal
	while (isspace((unsigned char)*start)) start++; // first non-trimmable up to terminal
	if (end > start) {
		while (isspace((unsigned char)*end)) end--; // last non-trimmable
	}
	end[1] = '\0'; // terminate after the last non-trimmable
	// shift the trimmed content to the begin of the string,
	// +1 for a single character, and +1 for the added terminator
	memmove(s, start, end - start + 2);
}

char eq(const char *s1, const char *s2)
{
	if (s1 == s2) return 1; // both NULL or point to the same string
	if (!s1 || !s2) return 0; // only one is NULL
	// compare each character case-insensitively until a terminator is reached
	// in either string
	while (*s1 && *s2 && toupper((unsigned char)*s1) == toupper((unsigned char)*s2)) {
		s1++;
		s2++;
	}
	// if both terminators have been reached, they are equal
	return !*s1 && !*s2;
}

char instr_size1(const char *s)
{
	// search string: space + str + space
	char search_str[strlen(s)+3];
	sprintf(search_str, " %s ", s);
	uppercase(search_str);
	return (strstr(" HLT NOP RETURN RSHIFT LSHIFT PUSH POP ",search_str) != 0);
}

char instr_size2(const char *s)
{
	// search string: space + str + space
	char search_str[strlen(s)+3];
	sprintf(search_str, " %s ", s);
	uppercase(search_str);
	return (strstr(" JMP JC JNC JZ JNZ JS JNS JV JNV CALL MOV ADD SUB ROR AND"
		" OR XOR STORE LOAD CMP BIT ", search_str) != 0);
}

char reserved(const char *s)
{
	if (instr_size1(s)) return 1;
	if (instr_size2(s)) return 1;
	// search string: space + s + space
	char search_str[strlen(s)+3];
	sprintf(search_str, " %s ", s);
	uppercase(search_str);
	return (strstr(" R0 R1 R2 R3 R4 R5 R6 R7 SP FLAGS ", search_str) != 0);
}

char instr_noarg(const char *s)
{
	if      (eq(s, "HLT"))    scopy(RAM, "00000000");
	else if (eq(s, "NOP"))    scopy(RAM, "00000001");
	else if (eq(s, "RETURN")) scopy(RAM, "11111000");
	else return 0;
	return 1;
}

char instr_reg(const char *s)
{
	if      (eq(s, "LSHIFT")) scopy(RAM, "10100");
	else if (eq(s, "RSHIFT")) scopy(RAM, "11010");
	else if (eq(s, "PUSH"))   scopy(RAM, "11100");
	else if (eq(s, "POP"))    scopy(RAM, "11110");
	else return 0;
	return 1;
}

char instr_n(const char *s)
{
	if      (eq(s, "JMP"))  scopy(RAM, "00000010");
	else if (eq(s, "JC"))   scopy(RAM, "00000100");
	else if (eq(s, "JNC"))  scopy(RAM, "00000101");
	else if (eq(s, "JZ"))   scopy(RAM, "00000110");
	else if (eq(s, "JNZ"))  scopy(RAM, "00000111");
	else if (eq(s, "JS"))   scopy(RAM, "00001000");
	else if (eq(s, "JNS"))  scopy(RAM, "00001001");
	else if (eq(s, "JV"))   scopy(RAM, "00001010");
	else if (eq(s, "JNV"))  scopy(RAM, "00001011");
	else if (eq(s, "CALL")) scopy(RAM, "11101000");
	else return 0;
	return 2;
}

char instr_reg_op2(const char *s)
{
	if      (eq(s, "MOV"))   scopy(RAM, "0001");
	else if (eq(s, "ADD"))   scopy(RAM, "0010");
	else if (eq(s, "SUB"))   scopy(RAM, "0011");
	else if (eq(s, "AND"))   scopy(RAM, "0100");
	else if (eq(s, "OR"))    scopy(RAM, "0101");
	else if (eq(s, "XOR"))   scopy(RAM, "0110");
	else if (eq(s, "ROR"))   scopy(RAM, "0111");
	else if (eq(s, "CMP"))   scopy(RAM, "1011");
	else if (eq(s, "BIT"))   scopy(RAM, "1100");
	else return 0;
	return 2;
}

char load_store(const char *s)
{
	if      (eq(s, "STORE")) scopy(RAM, "1000");
	else if (eq(s, "LOAD"))  scopy(RAM, "1001");
	else return 0;
	return 2;
}

/* <label_char> ::= <letter> | <dec> | "_" */
char label_char(const char c)
{
	return isalpha((unsigned char)c) || isdigit((unsigned char)c) || c == '_';
}

/* <label> ::= <letter> <label_char*> */
char label(const char *s)
{
	if (!isalpha((unsigned char)s[0])) return 0;
	for (int i = 1; s[i] != '\0'; i++) {
		if (!label_char(s[i])) return 0;
	}
	// don't allow labels to use reserved words
	if (reserved(s)) error(RESERVED);
	return 1;
}

/* <array_element> ::= <number> | <quoted_string> */
char array_element(const char *s)
{
	if (!s) error(ARRAY_ELEMENT);
	if (s[0] == '"') {
		// <quoted_string> ::= "\"" <char+> "\""
		if (strlen(s) < 3) error(EMPTY_STRING);
		// the closing quote is handled at nexttoken in data_structures.c
	} else if (number(s) <= NUMBER_ERROR) {
		error(ARRAY_ELEMENT);
	}
	return 1;
}

int regnum(const char *s)
{
	if (eq(s,"R0")) return 0;
	if (eq(s,"R1")) return 1;
	if (eq(s,"R2")) return 2;
	if (eq(s,"R3")) return 3;
	if (eq(s,"R4")) return 4;
	if (eq(s,"R5")) return 5;
	if (eq(s,"R6") || eq(s,"FLAGS")) return 6;
	if (eq(s,"R7") || eq(s,"SP")) return 7;
	return -1;
}

int value(const char *s)
{
	int n = number(s);
	if (n >= 0) return n;
	// if it's not a number, it must be a label
	int i = findlabel(s);
	if (i > NUMBER_ERROR) {
		return Out.label[i].val;
	} else {
		return -1;
	}
}

void bitcopy(char *dest, int num, int high, int low)
{
	// convert VHDL [7 DOWNTO 0] to array order MSB=0, LSB=7
	int MSB = 7 - high;
	int LSB = 7 - low;
	for (int i = LSB; i >= MSB; i--) { // from LSB to MSB
		// num & 1 = num's LSB (bitwise AND)
		dest[i] = (num & 1) ? '1' : '0';
		num >>= 1;
	}
	if (LSB == 7) dest[8] = '\0';
}

char* scopy(char *dest, const char *src) {
	if (src) {
		strcpy(dest, src);
	} else {
		dest[0] = '\0';
	}
	return dest;
}
